Added java 9 support