@@ -15,16 +15,16 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.M7 </version>
+        <version>2.0.0.M7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>1.9</java.version>
 
         <start-class>com.redparty.partyplanner.PartyPlannerApp</start-class>
-        <lombok.version>1.16.18</lombok.version>
+        <lombok.version>1.16.20</lombok.version>
         <quartz.version>2.3.0</quartz.version>
     </properties>
 
@@ -129,6 +129,14 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
+        <!-- todo review Java 9 issue https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-with-Java-9  -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <!---->
+
     </dependencies>
 
     <build>
@@ -161,42 +169,81 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- todo delete Java 9 issue https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-with-Java-9  -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-modules java.base</argLine>
+                </configuration>
+            </plugin>
+            <!---->
+
+            <!--
+           java 9 module issue see https://github.com/rzwitserloot/lombok/issues/985
+            <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-compiler-plugin</artifactId>
+                 <version>3.7.0</version>
+                 <configuration>
+                     <source>${java.version}</source>
+                     <target>${java.version}</target>
+                     <showDeprecation>true</showDeprecation>
+                     <showWarnings>true</showWarnings>
+                     <fork>true</fork>
+                     <compilerArgs>
+                         <arg>-Werror</arg>
+                         <arg>-Xlint:all</arg>
+                         <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                         <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                         <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                         <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                         <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                         <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                         <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                         <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                         <arg>-J&#45;&#45;add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                     </compilerArgs>
+                 </configuration>
+             </plugin>-->
+
         </plugins>
     </build>
 
 
     <!-- For not released spring boot versions -->
-     <repositories>
-         <repository>
-             <id>spring-snapshots</id>
-             <url>http://repo.spring.io/snapshot</url>
-             <snapshots>
-                 <enabled>true</enabled>
-             </snapshots>
-         </repository>
-         <repository>
-             <id>spring-milestones</id>
-             <url>http://repo.spring.io/milestone</url>
-         </repository>
-     </repositories>
-     <pluginRepositories>
-         <pluginRepository>
-             <id>spring-snapshots</id>
-             <name>Spring Snapshots</name>
-             <url>https://repo.spring.io/snapshot</url>
-             <snapshots>
-                 <enabled>true</enabled>
-             </snapshots>
-         </pluginRepository>
-         <pluginRepository>
-             <id>spring-milestones</id>
-             <name>Spring Milestones</name>
-             <url>https://repo.spring.io/milestone</url>
-             <snapshots>
-                 <enabled>false</enabled>
-             </snapshots>
-         </pluginRepository>
-     </pluginRepositories>
+    <repositories>
+        <repository>
+            <id>spring-snapshots</id>
+            <url>http://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <url>http://repo.spring.io/milestone</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
     <!--   -->
 
 </project>
